WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
164514
REGRESSION (
r208149
): Media scrubber is not displayed in media controls
https://bugs.webkit.org/show_bug.cgi?id=164514
Summary
REGRESSION (r208149): Media scrubber is not displayed in media controls
Jer Noble
Reported
2016-11-08 08:44:52 PST
REGRESSION (
r208149
): Media scrubber is not displayed in media controls
Attachments
Patch
(1.74 KB, patch)
2016-11-08 08:58 PST
,
Jer Noble
darin
: review+
Details
Formatted Diff
Diff
Patch for landing
(2.02 KB, patch)
2016-11-08 13:25 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-11-08 08:48:16 PST
rdar://problem/29098431
Jer Noble
Comment 2
2016-11-08 08:58:32 PST
Created
attachment 294162
[details]
Patch
Darin Adler
Comment 3
2016-11-08 09:10:01 PST
Comment on
attachment 294162
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294162&action=review
> Source/WebCore/html/MediaElementSession.h:174 > -static bool isType(const WebCore::PlatformMediaSession& session) { return session.mediaType() == WebCore::PlatformMediaSession::Video || session.mediaType() == WebCore::PlatformMediaSession::Audio; } > +static bool isType(const WebCore::PlatformMediaSession& session) > +{ > + return session.mediaType() == WebCore::PlatformMediaSession::Video > + || session.mediaType() == WebCore::PlatformMediaSession::Audio > + || session.mediaType() == WebCore::PlatformMediaSession::VideoAudio; > +}
Normally we’d like these isType functions to stay as tiny one-liners. Maybe we can make an inline helper for this to call? I think it might be nicer to use switch for this rather than a return statement.
Darin Adler
Comment 4
2016-11-08 09:10:27 PST
Why no regression test?
Jer Noble
Comment 5
2016-11-08 11:29:09 PST
(In reply to
comment #4
)
> Why no regression test?
The patch should have mentioned that this fixes a number of broken TestWebKitAPI tests.
Jer Noble
Comment 6
2016-11-08 11:41:32 PST
(In reply to
comment #3
)
> Comment on
attachment 294162
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=294162&action=review
> > > Source/WebCore/html/MediaElementSession.h:174 > > -static bool isType(const WebCore::PlatformMediaSession& session) { return session.mediaType() == WebCore::PlatformMediaSession::Video || session.mediaType() == WebCore::PlatformMediaSession::Audio; } > > +static bool isType(const WebCore::PlatformMediaSession& session) > > +{ > > + return session.mediaType() == WebCore::PlatformMediaSession::Video > > + || session.mediaType() == WebCore::PlatformMediaSession::Audio > > + || session.mediaType() == WebCore::PlatformMediaSession::VideoAudio; > > +} > > Normally we’d like these isType functions to stay as tiny one-liners. Maybe > we can make an inline helper for this to call? > > I think it might be nicer to use switch for this rather than a return > statement.
I'm imagining some template method like: template<typename T> bool isIn(T value, initializer_list<T> candidates) { for (auto& candidate : candidates) { if (value == candidate) return true; } return false; } Then, the isType() implementation looks like: return isIn(session.mediaType(), { WebCore::PlatformMediaSession::Video, WebCore::PlatformMediaSession::Audio, WebCore::PlatformMediaSession::VideoAudio});
Jer Noble
Comment 7
2016-11-08 13:25:51 PST
Created
attachment 294179
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2016-11-09 12:21:50 PST
Comment on
attachment 294179
[details]
Patch for landing Clearing flags on attachment: 294179 Committed
r208464
: <
http://trac.webkit.org/changeset/208464
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug