REGRESSION (r208149): Media scrubber is not displayed in media controls https://bugs.webkit.org/show_bug.cgi?id=164514

Reviewed by Darin Adler.

Fixes broken Media Controls API tests.

Added a new PlatformMediaSessionType; need to add that same type to the TYPE_TRAITS section of
MediaElementSession.h so that is<> and downcast<> work correctly.

* html/MediaElementSession.h:
(isType):


Canonical link: https://commits.webkit.org/182195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208464 268f45cc-cd09-0410-ab3c-d52691b4dbfc