Source/WebCore/html/MediaElementSession.h
@@ -127,6 +127,13 @@ public:
     bool allowsPlaybackControlsForAutoplayingAudio() const;
     bool allowsNowPlayingControlsVisibility() const override;
 
+    static bool isMediaElementSessionMediaType(MediaType type)
+    {
+        return type == Video
+            || type == Audio
+            || type == VideoAudio;
+    }
+
 private:
 
 #if ENABLE(WIRELESS_PLAYBACK_TARGET)
@@ -165,7 +172,7 @@ private:
 } // namespace WebCore
 
 SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::MediaElementSession)
-static bool isType(const WebCore::PlatformMediaSession& session) { return session.mediaType() == WebCore::PlatformMediaSession::Video || session.mediaType() == WebCore::PlatformMediaSession::Audio; }
+static bool isType(const WebCore::PlatformMediaSession& session) { return WebCore::MediaElementSession::isMediaElementSessionMediaType(session.mediaType()); }
 SPECIALIZE_TYPE_TRAITS_END()
 
 #endif // ENABLE(VIDEO)
